# lab2

./: CMakeLists.txt  Lab-02.sln  Makefile
List/: CMakeLists.txt  List.vcxproj  List.vcxproj.filters  main.cpp
ListTests/: CMakeLists.txt  ListGTests.cpp  ListTests.cpp  ListTests.vcxproj  ListTests.vcxproj.filters
includes/: my_list.h
